--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     <main class="container">
         <div class="top__cards">
             <div class="top__card">
-                <img src="./img/Layer 43.png" alt="girl">
+                <img src="./img/Girl.png" alt="girl">
                 <div class="centered">
                     <h3>30% OFF</h3>
                     <h2>FOR WOMEN</h2>
